<resources>
    <string name="app_name">Notes</string>
    <string name="sambutan">Selamat Datang</string>

    <!-- Home Fragment -->
    <string name="search">Cari disini …</string>
    <string name="list" translatable="false">List</string>
    <string name="grid" translatable="false">Grid</string>

    <!-- Calendar Fragment -->
    <string name="calendar">Kalender</string>

    <string name="sunday">Min</string>
    <string name="monday">Sen</string>
    <string name="tuesday">Sel</string>
    <string name="wednesday">Rab</string>
    <string name="thursday">Kam</string>
    <string name="friday">Jum</string>
    <string name="saturday">Sab</string>

    <string name="month">Bulan</string>
    <string name="weeks">Minggu</string>

    <!-- Other Fragment -->
    <string name="akun">Akun</string>
    <string name="google_data">Cadangan dan Pemulihan Data</string>
    <string name="profile">Profile</string>
    <string name="tempat_sampah">Tempat Sampah</string>
    <string name="arsip">Arsip</string>
    <string name="saran">Masukan atau saran</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="umum">Umum</string>
    <string name="mode_gelap">Tema</string>
    <string name="pilihan_bahasa">Pilihan Bahasa</string>
    <string name="atur_kata_sandi">Atur Kata Sandi</string>
    <string name="lainnya">Lainnya</string>
    <string name="berbagi">Berbagi</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>

    <string-array name="bahasa">
        <item>Bahasa Indonesia</item>
        <item>English</item>
        <item>Italiano</item>
        <item>Francais</item>
        <item>日本語</item>
    </string-array>

    <!-- Add Notes Activity -->
    <string name="judul">Judul</string>
    <string name="catatan">Catatan</string>
    <string name="tanggal"> Tanggal</string>
    <!-- Alert Dialog -->
    <string name="hapus">Hapus</string>
    <string name="hapus_desc">Apakah Anda yakin ingin menghapus catatan ini?</string>
    <string name="tidak">Batal</string>

    <string name="notes_diperbarui">Notes berhasil diperbarui</string>
    <string name="notes_dihapus">Notes berhasil dihapus</string>
    <string name="notes_batal_dihapus">Notes gagal dihapus</string>

    <!-- Bottom Sheet Dialog -->
    <string name="background_color">Warna Latar Belakang</string>
    <string name="red">Merah</string>
    <string name="orange">Jingga</string>
    <string name="yellow">Kuning</string>
    <string name="green">Hijau</string>
    <string name="turquoise">Toska</string>
    <string name="blue">Biru</string>
    <string name="purple">Ungu</string>
    <string name="pink">Merah muda</string>
    <string name="white">Putih</string>

    <!-- SignUp LogIn Activity -->
    <string name="username_edt">Masukkan username</string>
    <string name="email_edt">Masukkan email</string>
    <string name="password_edt">Masukkan password</string>
    <string name="confirm_edt">Konfirmasi password</string>
    <string name="question">Apakah Anda sudah menjadi pengguna? Masuk</string>
    <string name="question_2">Apakah anda belum terdaftar? Daftar</string>

    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm" translatable="false">Confirm Password</string>
    <string name="sign_up" translatable="false">SIGN UP</string>
    <string name="log_in" translatable="false">LOG IN</string>

    <!-- Privacy Police Activity -->
    <string name="pembukaan" translatable="false">Privacy Policy for Notes Application</string>
    <string name="subjudul_1" translatable="false">Introduction</string>
    <string name="desc_1" translatable="false">We value your privacy as a user of our Notes application. This Privacy Policy explains how we collect, use, and protect your personal information when you use this application. We are committed to protecting your privacy and ensuring that your personal information is used in accordance with this policy.</string>
    <string name="subjudul_2" translatable="false">Information We Collect</string>
    <string name="desc_2" translatable="false">We may collect certain personal information when you use our Notes application, including:
1. Information you provide when signing up or setting up an account, such as your name, email address, and password.
2. Content you save in your notes, including text, images, or related files.
3. Information generated when you use the application, such as the date and time of usage, interactions with application features, and usage and performance data.
</string>
    <string name="subjudul_3" translatable="false">Use of Information</string>
    <string name="desc_3" translatable="false">We use the personal information we collect for the following purposes:
1. Providing and managing the Notes service you use.
2. Improving and developing our application, as well as optimizing the user experience.
3. Sending important notifications about updates, changes, or issues with the Notes service.
4. Analyzing application usage for research and product development purposes.
5. Enforcing the User Policy and Terms of Use of the application.
</string>
    <string name="subjudul_4" translatable="false">Disclosure to Third Parties</string>
    <string name="desc_4" translatable="false">We will not disclose your personal information to third parties without your permission, except in the following situations:
1. To fulfill legal obligations or official requests from authorities.
2. To protect our rights, security, or property, as well as the rights, security, or property of other users.
3. To support third-party service providers who assist in the operation of the Notes application, such as hosting or analytics providers.
4. In the event of a change in company ownership, merger, or acquisition, where user information may be part of the transferred assets.
</string>
    <string name="subjudul_5" translatable="false">Information Security</string>
    <string name="desc_5" translatable="false">We take appropriate steps to protect your personal information from unauthorized access, unauthorized use, alteration, or disclosure. We implement technical, administrative, and physical security measures to safeguard your personal information.</string>
    <string name="subjudul_6" translatable="false">Privacy Settings</string>
    <string name="desc_6" translatable="false">You have control over your personal information that we collect. You can access, update, or delete your personal information within the Notes application. You can also manage your privacy preferences within the application settings.</string>
    <string name="subjudul_7" translatable="false">Changes to the Privacy Policy</string>
    <string name="desc_7" translatable="false">This Privacy Policy may be updated from time to time. If there are substantial changes to this policy, we will notify you through in-app notifications or via the registered email address.</string>
    <string name="subjudul_8" translatable="false">Contact Us</string>
    <string name="desc_8" translatable="false">If you have any questions, issues, or requests regarding our privacy policy, please contact us at [contact email address].</string>
    <string name="desc_9" translatable="false">By using our Notes application, you consent to the collection, use, and disclosure of your information as described in this privacy policy.</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>