<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/ScreenBackground"
    tools:context=".ui.otherFragment.PrivacyPoliceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btn_back_arrow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:backgroundTint="@android:color/transparent"
                app:srcCompat="@drawable/round_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/pembukaan"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14sdp" />
        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_1"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_1"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_2"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_2"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_3"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_3"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_4"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_4"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_5"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_5"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_6"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_6"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_7"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_7"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/subjudul_8"
            android:textSize="@dimen/_12sdp"
            style="@style/TextColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_8"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/desc_9"
            android:textSize="@dimen/_10sdp"
            style="@style/TextColor"/>

    </LinearLayout>

</ScrollView>