<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp"
    tools:context=".ui.calendar.MonthlyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/round_arrow_back2" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Month"
            android:textAlignment="center"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/palette1_1"/>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/round_arrow_forward" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/minggu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textColor="@color/palette1_2"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/senin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textColor="@color/palette1_2"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/selasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textColor="@color/palette1_2"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/rabu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textColor="@color/palette1_2"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/kamis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textColor="@color/palette1_2"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/jumat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textColor="@color/palette1_2"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

        <TextView
            android:id="@+id/sabtu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textColor="@color/palette1_2"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>