<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_8sdp"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/log_in"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/dark_blue"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/nama_opt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/round_person"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:ems="10"
        android:textSize="@dimen/_12sdp"
        android:inputType="text"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/alamat_opt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle"
        android:drawableStart="@drawable/round_lock"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:ems="10"
        android:textSize="@dimen/_12sdp"
        android:inputType="text"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/rectangle_round"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/confirm_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:clickable="true"
        android:text="@string/question_2"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/gray"
        android:textAlignment="center"/>

</LinearLayout>
